unpackaged/main/default/objects/CSD__mdt/CSD__mdt.object-meta.xml
<CustomObject>
    <label>ClassStartDate</label>
    <pluralLabel>ClassStartDates</pluralLabel>
</CustomObject>