unpackaged/main/default/objects/CSD__mdt/fields/Beginning__c.field-meta.xml
<CustomField>
    <fullName>Beginning__c</fullName>
    <label>Beginning</label>
    <type>Date</type>
</CustomField>