unpackaged/main/default/objects/CSD__mdt/fields/Bug__c.field-meta.xml
<CustomField>
    <fullName>Bug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bug</label>
    <type>Checkbox</type>
</CustomField>