unpackaged/main/default/objects/CSD__mdt/fields/Early__c.field-meta.xml
<CustomField>
    <fullName>Early__c</fullName>
    <label>Early</label>
    <type>Date</type>
</CustomField>