unpackaged/main/default/objects/CSD__mdt/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Date</type>
</CustomField>