unpackaged/main/default/objects/CSD__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Beginning__c</columns>
    <columns>Date__c</columns>
    <columns>Early__c</columns>
    <columns>Term__c</columns>
    <columns>Year__c</columns>
    <columns>Active__c</columns>
    <columns>Bug__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>